--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   },
   "license": "ISC",
   "author": "retardgerman",
-  "type": "commonjs",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "discord.js": "^14.21.0"
+    "discord.js": "^14.21.0",
+    "dotenv": "^16.5.0"
   }
 }
