--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "husky install"
+    "commit": "git-cz"
   },
   "dependencies": {
     "discord.js": "^14.21.0",
@@ -35,3 +35,4 @@
     }
   }
 }
+
