--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "dependencies": {
     "discord.js": "^14.21.0",
-    "dotenv": "^16.5.0"
+    "dotenv": "^16.5.0",
+    "node-cron": "^4.2.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
